--- a/_config.yml
+++ b/_config.yml
@@ -76,12 +76,12 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "lunofono"
 facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : # Open Graph/Twitter default site image
+og_image                 : "assets/images/icon.svg"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
