Add Twitter and e-mail links
Twitter for both the author and the footer and e-mail to the footer.

Signed-off-by: Leandro Lucarella <luca@llucax.com>

--- a/_config.yml
+++ b/_config.yml
@@ -114,10 +114,19 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/llucax"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/lucatweets"
 
 # Site Footer
 footer:
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:contact@lunofono.app"
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/lunofono"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/lunofono"
