Use a PNG image as OpenGraph image
SVG is not supported by OpenGraph.

Signed-off-by: Leandro Lucarella <luca@llucax.com>

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : "assets/images/icon.svg"
+og_image                 : "assets/images/icon.png"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
